--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -34,8 +34,11 @@ kafkaServer:
 # Specifies broker version to use, leave empty for default
 kafkaBrokerVersion: ""
 
-# Specifies custom label visible in Prometheus for the Kafka Server/Cluster
-kafkaServerClusterLabel: ""
+# Specifies custom labels visible in Prometheus for the Kafka Server/Cluster
+kafkaServerLabels: {}
+  # cluster: "prod-cluster"
+  # env: "prod"
+  # tier: "backend"
 
 # Specifies log verbosity
 verbosity: 0
