--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -35,7 +35,7 @@ kafkaServer:
 kafkaBrokerVersion: ""
 
 # Specifies custom labels visible in Prometheus for the Kafka Server/Cluster
-kafkaServerLabels: {}
+kafkaLabels: {}
   # cluster: "prod-cluster"
   # env: "prod"
   # tier: "backend"
