[prometheus-kafka-stack] refactoring to named template and moving to _helpers.tpl
Signed-off-by: Mati Kepa <mati@kepa.eu.org>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -45,13 +45,8 @@ spec:
           {{- if .Values.kafkaBrokerVersion }}
             - '--kafka.version={{ .Values.kafkaBrokerVersion }}'
           {{- end }}
-          {{- if .Values.kafkaServerLabels }}
-            {{- $serverLabelsList := list }}
-            {{- range $key, $value := .Values.kafkaServerLabels }}
-              {{- $serverLabelsList = append $serverLabelsList (printf "%s=%s" $key $value) }}
-            {{- end }}
-            {{- $serverLabelsArgs := join "," $serverLabelsList }}
-            - '--kafka.labels={{ $serverLabelsArgs }}'
+          {{- if .Values.kafkaLabels }}
+            - '--kafka.labels={{ include "prometheus-kafka-exporter.kafkaLabels" . }}'
           {{- end }}
           {{- if .Values.tls.enabled }}
             - '--tls.enabled'
