[prometheus-kafka-exporter] add kafka labels to prometheus metrics (#5976)
Signed-off-by: Mati Kepa <mati@kepa.eu.org>
Signed-off-by: Mati <36644582+matikepa@users.noreply.github.com>
Co-authored-by: Mati Kepa <mati@kepa.eu.org>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -32,7 +32,13 @@ kafkaServer:
   - kafka-server:9092
 
 # Specifies broker version to use, leave empty for default
-kafkaBrokerVersion:
+kafkaBrokerVersion: ""
+
+# Specifies custom labels visible in Prometheus for the Kafka Server/Cluster
+kafkaLabels: {}
+  # cluster: "prod-cluster"
+  # env: "prod"
+  # tier: "backend"
 
 # Specifies log verbosity
 verbosity: 0
