--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -45,6 +45,9 @@ spec:
           {{- if .Values.kafkaBrokerVersion }}
             - '--kafka.version={{ .Values.kafkaBrokerVersion }}'
           {{- end }}
+          {{- if .Values.kafkaLabels }}
+            - '--kafka.labels={{ include "prometheus-kafka-exporter.kafkaLabels" . }}'
+          {{- end }}
           {{- if .Values.tls.enabled }}
             - '--tls.enabled'
           {{- if .Values.tls.mountPath }}
