--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -70,14 +70,14 @@ spec:
             httpGet:
               path: /metrics
               port: http
-            timeoutSeconds: {{ .Values.service.livenessProbe.timeoutSeconds }}
-            periodSeconds: {{ .Values.service.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
           readinessProbe:
             httpGet:
               path: /metrics
               port: http
-            timeoutSeconds: {{ .Values.service.readinessProbe.timeoutSeconds }}
-            periodSeconds: {{ .Values.service.readinessProbe.timeoutSeconds }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
