--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.serviceMonitor.enabled }}
-apiVersion: {{ .Values.serviceMonitor.apiVersion }}
+apiVersion: {{ .Values.serviceMonitor.apiVersion | default "monitoring.coreos.com/v1" }}
 kind: ServiceMonitor
 metadata:
 {{- if .Values.serviceMonitor.labels }}
