[prometheus-nats-exporter] Support customization of timeout, period for NATS probes (#5971)
Signed-off-by: Romil Vasani <romil.vasani93@gmail.com>
Signed-off-by: Romil Vasani <rvasani@crusoeenergy.com>
Co-authored-by: MH <zanhsieh@gmail.com>
Co-authored-by: Romil Vasani <rvasani@crusoeenergy.com>
Co-authored-by: Mikhail Naletov <36846182+okgolove@users.noreply.github.com>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -70,10 +70,14 @@ spec:
             httpGet:
               path: /metrics
               port: http
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
           readinessProbe:
             httpGet:
               path: /metrics
               port: http
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
