--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -17,6 +17,13 @@ service:
   port: 80
   targetPort: 7777
 
+livenessProbe:
+  timeoutSeconds: 1
+  periodSeconds: 10
+readinessProbe:
+  timeoutSeconds: 1
+  periodSeconds: 10
+
 serviceMonitor:
   enabled: false
   additionalLabels: {}
