--- a/charts/prometheus-redis-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-redis-exporter/templates/servicemonitor.yaml
@@ -1,5 +1,5 @@
 {{- if and ( .Capabilities.APIVersions.Has "monitoring.coreos.com/v1" ) ( .Values.serviceMonitor.enabled ) }}
-apiVersion: {{ .Values.serviceMonitor.apiVersion }}
+apiVersion: {{ .Values.serviceMonitor.apiVersion | default "monitoring.coreos.com/v1" }}
 kind: ServiceMonitor
 metadata:
 {{- if .Values.serviceMonitor.labels }}
