Add support for mounting extra volumes
Signed-off-by: mattbichay <matt@bichay.dev>

--- a/charts/prometheus-stackdriver-exporter/values.yaml
+++ b/charts/prometheus-stackdriver-exporter/values.yaml
@@ -115,6 +115,20 @@ extraEnv: []
   # - name: GOMAXPROCS
   #   value: "2"
 
+## Additional volumes to mount
+##
+extraVolumes: []
+  # - name: custom-ca
+  #   secret:
+  #     secretName: custom-ca
+
+## Additional volume mounts for the container
+##
+extraVolumeMounts: []
+  # - name: custom-ca
+  #   mountPath: /etc/ssl/certs/ca-certificates.crt
+  #   subPath: ca.crt
+
 ## Node labels for stackdriver-exporter pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
