--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -62,6 +62,9 @@ spec:
           secret:
             secretName: {{ template "stackdriver-exporter.fullname" . }}
       {{- end}}
+      {{- if .Values.extraVolumes }}
+        {{- toYaml .Values.extraVolumes | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -72,6 +75,9 @@ spec:
             - name: stackdriver-service-account
               mountPath: /etc/secrets/service-account/
           {{- end}}
+          {{- if .Values.extraVolumeMounts }}
+            {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
+          {{- end }}
           args:
             {{- if .Values.stackdriver.projectIds }}
             {{- range .Values.stackdriver.projectIds }}
