add user namespace for alertmanager
Signed-off-by: dongjiang <dongjiang1989@126.com>

update by codereview

Signed-off-by: dongjiang <dongjiang1989@126.com>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -33,6 +33,9 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      {{- if .Values.hostUsers }}
+      hostUsers: true
+      {{- end }}
       automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
