--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -37,6 +37,12 @@ namespaceOverride: ""
 
 automountServiceAccountToken: true
 
+## Running within a user namespace.
+# Kubernetes server must be at or later than version v1.25.
+# Kubernetes v1.25 through to v1.27 recognise UserNamespacesStatelessPodsSupport.
+# Kubernetes v1.28 through to v1.32 need to enable the UserNamespacesSupport feature gate.
+hostUsers: false
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
