support encoded string for thanos sidecar secret
Signed-off-by: trouaux <t.rouaux@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -4495,6 +4495,8 @@ prometheus:
       #     #   region: ""
       #     #   access_key: ""
       #     #   secret_key: ""
+      #   # will not encode the secret in case you want to pass encoded string instead of plain text config
+      #   secretIsBase64: false
 
     ## Containers allows injecting additional containers. This is meant to allow adding an authentication proxy to a Prometheus pod.
     ## if using proxy extraContainer update targetPort with proxy container port
