[prometheus] fix prefixURL "/" in Probe's
Signed-off-by: EugeneLiukin <eugeneliukindev@gmail.com>
Signed-off-by: Eugene Liukin <eugeneliukin.dev@gmail.com>

--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -234,7 +234,7 @@ spec:
           readinessProbe:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
-              path: {{ .Values.server.prefixURL }}/-/ready
+              path: {{ if ne .Values.server.prefixURL "/" }}{{ .Values.server.prefixURL }}{{ end }}/-/ready
               port: 9090
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
@@ -253,7 +253,7 @@ spec:
           livenessProbe:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
-              path: {{ .Values.server.prefixURL }}/-/healthy
+              path: {{ if ne .Values.server.prefixURL "/" }}{{ .Values.server.prefixURL }}{{ end }}/-/healthy
               port: 9090
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
@@ -273,7 +273,7 @@ spec:
           startupProbe:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
-              path: {{ .Values.server.prefixURL }}/-/healthy
+              path: {{ if ne .Values.server.prefixURL "/" }}{{ .Values.server.prefixURL }}{{ end }}/-/healthy
               port: 9090
               scheme: {{ .Values.server.probeScheme }}
               {{- if .Values.server.probeHeaders }}
