--- a/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
@@ -100,6 +100,10 @@ spec:
   securityContext:
 {{ toYaml .Values.alertmanager.alertmanagerSpec.securityContext | indent 4 }}
 {{- end }}
+{{- if .Values.alertmanager.alertmanagerSpec.dnsConfig }}
+  dnsConfig:
+{{ toYaml .Values.alertmanager.alertmanagerSpec.dnsConfig | indent 4 }}
+{{- end }}
 {{- if .Values.alertmanager.alertmanagerSpec.storage }}
   storage:
 {{ tpl (toYaml .Values.alertmanager.alertmanagerSpec.storage | indent 4) . }}
