Add configurability for probes
Signed-off-by: mbichay <mbichay@palantir.com>

--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -138,17 +138,9 @@ spec:
             - containerPort: {{ .Values.service.httpPort }}
               name: http
           livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 30
-            timeoutSeconds: 10
+            {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 10
-            timeoutSeconds: 10
+            {{- toYaml .Values.readinessProbe | nindent 12 }}
           {{- if .Values.containerSecurityContext }}
           securityContext:
             {{- toYaml .Values.containerSecurityContext | nindent 12 }}
