--- a/charts/prometheus-stackdriver-exporter/values.yaml
+++ b/charts/prometheus-stackdriver-exporter/values.yaml
@@ -35,6 +35,26 @@ securityContext: {}
 
 containerSecurityContext: {}
 
+## Liveness probe
+##
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+    scheme: HTTP
+  initialDelaySeconds: 30
+  timeoutSeconds: 10
+
+## Readiness probe
+##
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+    scheme: HTTP
+  initialDelaySeconds: 10
+  timeoutSeconds: 10
+
 service:
   type: ClusterIP
   httpPort: 9255
