[prometheus-kafka-exporter]feat: added hostAliases capabilities
Signed-off-by: Corrado Tiberio <corrado.tiberio1993@gmail.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -9,6 +9,10 @@ command: []
 
 imagePullSecrets: []
 
+hostAliases: []
+  # - ip: "10.10.10.10"
+  #   hostnames: ["kafka.server"]
+
 # Additional labels for deployment
 deploymentLabels: {}
 
