--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -33,6 +33,10 @@ spec:
       {{- toYaml .Values.securityContext | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ template "prometheus-kafka-exporter.serviceAccountName" . }}
+      {{- with .Values.hostAliases }}
+      hostAliases:
+          {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - args:
             - '--verbosity={{ .Values.verbosity }}'
