[kube-prometheus-stack] Add dnsPolicy for alertmanager and prometheus
Signed-off-by: Andrei Raiu <raiu.andrei@protonmail.com>

--- a/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
@@ -104,6 +104,9 @@ spec:
   dnsConfig:
 {{ toYaml .Values.alertmanager.alertmanagerSpec.dnsConfig | indent 4 }}
 {{- end }}
+{{- if .Values.alertmanager.alertmanagerSpec.dnsPolicy }}
+  dnsPolicy: {{ .Values.alertmanager.alertmanagerSpec.dnsPolicy }}
+{{- end }}
 {{- if .Values.alertmanager.alertmanagerSpec.storage }}
   storage:
 {{ tpl (toYaml .Values.alertmanager.alertmanagerSpec.storage | indent 4) . }}
