[kube-prometheus-stack] Remove default vaules for dnsPolicy
Signed-off-by: Andrei Raiu <raiu.andrei@protonmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1125,7 +1125,7 @@ alertmanager:
 
     ## DNS policy for Alertmanager.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api-reference/api.md#dnspolicystring-alias
-    dnsPolicy: "ClusterFirst"
+    dnsPolicy: ""
 
     ## ListenLocal makes the Alertmanager server listen on loopback, so that it does not bind against the Pod IP.
     ## Note this is only for the Alertmanager UI, not the gossip communication.
@@ -4476,7 +4476,7 @@ prometheus:
 
     ## DNS policy for Prometheus.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api-reference/api.md#dnspolicystring-alias
-    dnsPolicy: "ClusterFirst"
+    dnsPolicy: ""
 
     ## Priority class assigned to the Pods
     ##
