[prometheus-blackbox-exporter]: add renovate hint for blackbox exporter
Signed-off-by: AvivGuiser <avivguiser@gmail.com>

--- a/charts/prometheus-blackbox-exporter/Chart.yaml
+++ b/charts/prometheus-blackbox-exporter/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v2
 description: Prometheus Blackbox Exporter
 name: prometheus-blackbox-exporter
-version: 11.2.1
+version: 11.2.2
+# renovate: github=prometheus/blackbox_exporter
 appVersion: v0.27.0
 kubeVersion: ">=1.21.0-0"
 home: https://github.com/prometheus/blackbox_exporter
