enable pgsql dep only in CI + move refs to bitnami legacy
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-pgbouncer-exporter/ci/ci-values.yaml
+++ b/charts/prometheus-pgbouncer-exporter/ci/ci-values.yaml
@@ -10,7 +10,7 @@ rbac:
   pspEnabled: false
 extraContainers:
   - name: pgbouncer
-    image: bitnami/pgbouncer:latest
+    image: bitnamilegacy/pgbouncer:latest
     env:
       - name: POSTGRESQL_PASSWORD
         value: "password"
