--- a/charts/prometheus-pgbouncer-exporter/values.yaml
+++ b/charts/prometheus-pgbouncer-exporter/values.yaml
@@ -216,3 +216,8 @@ extraVolumeMounts: []
 podDisruptionBudget:
   enabled: false
   maxUnavailable: 1
+
+# If enabled Kafka dependency chart will be used.
+# This is only needed for the CI job so it should always be disabled.
+postgresql:
+  enabled: false
