--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -129,6 +129,8 @@ kubeRBACProxy:
       drop:
       - ALL
 
+  # Configure specific upstream port for kube-state-metrics container
+  port: 9091
   # Configure specific proxy endpoints port
   # This port is for healthz on readinessProbe
   proxyEndpointsPort: 8888
