--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -132,7 +132,7 @@ kubeRBACProxy:
   # Configure specific upstream port for kube-state-metrics container
   port: 9090
   # Configure specific proxy endpoints port
-  # This port is for healthz on readinessProbe
+  # This port is for healthz on readinessProbe kube-rbac-proxy-http container
   proxyEndpointsPort: 8888
 
   resources: {}
