[prometheus-stackdriver-exporter] Add support for extra volumes and probe configurability (#5995)
Signed-off-by: mattbichay <matt@bichay.dev>
Signed-off-by: mbichay <mbichay@palantir.com>
Co-authored-by: mattbichay <matt@bichay.dev>
Co-authored-by: mbichay <mbichay@palantir.com>
Co-authored-by: MH <zanhsieh@gmail.com>
Co-authored-by: Rico Pahlisch <pahli88@googlemail.com>

--- a/charts/prometheus-stackdriver-exporter/values.yaml
+++ b/charts/prometheus-stackdriver-exporter/values.yaml
@@ -35,6 +35,26 @@ securityContext: {}
 
 containerSecurityContext: {}
 
+## Liveness probe
+##
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+    scheme: HTTP
+  initialDelaySeconds: 30
+  timeoutSeconds: 10
+
+## Readiness probe
+##
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+    scheme: HTTP
+  initialDelaySeconds: 10
+  timeoutSeconds: 10
+
 service:
   type: ClusterIP
   httpPort: 9255
@@ -114,6 +134,20 @@ extraArgs: {}
 extraEnv: []
   # - name: GOMAXPROCS
   #   value: "2"
+
+## Additional volumes to mount
+##
+extraVolumes: []
+  # - name: custom-ca
+  #   secret:
+  #     secretName: custom-ca
+
+## Additional volume mounts for the container
+##
+extraVolumeMounts: []
+  # - name: custom-ca
+  #   mountPath: /etc/ssl/certs/ca-certificates.crt
+  #   subPath: ca.crt
 
 ## Node labels for stackdriver-exporter pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
