[kube-state-metrics]: consistently use / in probes path
Signed-off-by: yellowhat <1692490+yellowhat@users.noreply.github.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -275,7 +275,7 @@ spec:
           httpGet:
             scheme: HTTPS
             port: {{ .Values.kubeRBACProxy.proxyEndpointsPort | default 8888 }}
-            path: healthz
+            path: /healthz
           initialDelaySeconds: 5
           timeoutSeconds: 5
         {{- if .Values.kubeRBACProxy.resources }}
