[prometheus-stackdriver-exporter]: add support for projects filters
Signed-off-by: AvivGuiser <avivguiser@gmail.com>

--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -86,6 +86,9 @@ spec:
             {{- else }}
             - --google.project-id={{ .Values.stackdriver.projectId }}
             {{- end }}
+            {{- if .Values.stackdriver.projectFilters }}
+            - --google.projects.filter='{{ .Values.stackdriver.projectFilters }}'
+            {{- end }}
             - --monitoring.metrics-interval={{ .Values.stackdriver.metrics.interval }}
             - --monitoring.metrics-offset={{ .Values.stackdriver.metrics.offset }}
             {{- if .Values.stackdriver.metrics.prefixes }}
