--- a/charts/prometheus-stackdriver-exporter/values.yaml
+++ b/charts/prometheus-stackdriver-exporter/values.yaml
@@ -72,6 +72,8 @@ stackdriver:
   projectId: "FALSE"
   # The Google Project IDs to gather metrics for (requires 0.17.0+)
   projectIds: []
+  # filter for selecting google projects
+  projectFilters: ""
     # - "google-project-id"
   # An existing secret which contains credentials.json
   serviceAccountSecret: ""
