Add support for PVC annotations in StatefulSet
Signed-off-by: rb090 <roxana@lipocheck.de>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -248,6 +248,10 @@ spec:
   volumeClaimTemplates:
     - metadata:
         name: storage
+        {{- with .Values.persistence.annotations }}
+        annotations:
+          {{ toYaml . | nindent 14 }}
+        {{- end }}
       spec:
         accessModes:
           {{- toYaml .Values.persistence.accessModes | nindent 10 }}
