--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -1312,6 +1312,9 @@ alertmanager:
 
   persistence:
     size: 2Gi
+    ## Custom annotations for the PVC created by the alertmanager StatefulSet.
+    ## Useful for configuring storage provider options such as disk type, KMS encryption keys, or custom volume name prefixes.
+    annotations: {}
 
   podSecurityContext:
     runAsUser: 65534
