--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -276,6 +276,10 @@ persistence:
   ##
   enabled: true
 
+  ## Custom annotations for the PVC created by the alertmanager StatefulSet.
+  ## Useful for configuring storage provider options such as disk type, KMS encryption keys, or custom volume name prefixes.
+  annotations: { }
+
   ## Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
