removing pgsql dep
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-pgbouncer-exporter/ci/ci-values.yaml
+++ b/charts/prometheus-pgbouncer-exporter/ci/ci-values.yaml
@@ -4,6 +4,9 @@ rbac:
 extraContainers:
   - name: pgbouncer
     image: edoburu/pgbouncer:latest
+    ports:
+      - name: pgbouncer
+        containerPort: 6432
     env:
       - name: DB_HOST
         value: "postgres-host"
