Add optional labels object to alertmanager chart like proposed by @monotek
Add labels also to values.yaml and values.schema.json in alertmanager and prometheus charts

Signed-off-by: rb090 <roxana@lipocheck.de>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -252,6 +252,10 @@ spec:
         annotations:
           {{ toYaml . | nindent 14 }}
         {{- end }}
+        {{- with .Values.persistence.labels }}
+        labels:
+          {{ toYaml . | nindent 14 }}
+        {{- end }}
       spec:
         accessModes:
           {{- toYaml .Values.persistence.accessModes | nindent 10 }}
