--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -280,6 +280,10 @@ persistence:
   ## Useful for configuring storage provider options such as disk type, KMS encryption keys, or custom volume name prefixes.
   annotations: { }
 
+  ## Custom labels for the PVC created by the alertmanager StatefulSet.
+  ## Useful for selecting, grouping, and organizing so that they can be queried or targeted in deployments, policies, etc.
+  labels: { }
+
   ## Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
