use names targetport
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -235,7 +235,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/ready
-              port: 9090
+              port: {{ .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
@@ -243,7 +243,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              port: 9090
+              port: {{ .Values.server.portName }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.readinessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.readinessProbePeriodSeconds }}
@@ -254,7 +254,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
-              port: 9090
+              port: {{ .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
@@ -262,7 +262,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              port: 9090
+              port: {{ .Values.server.portName }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.livenessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.livenessProbePeriodSeconds }}
@@ -274,7 +274,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
-              port: 9090
+              port: {{ .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- if .Values.server.probeHeaders }}
               httpHeaders:
@@ -285,7 +285,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              port: 9090
+              port: {{ .Values.server.portName }}
             {{- end }}
             failureThreshold: {{ .Values.server.startupProbe.failureThreshold }}
             periodSeconds: {{ .Values.server.startupProbe.periodSeconds }}
