use names targetport
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -235,7 +235,11 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/ready
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
@@ -243,7 +247,11 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.readinessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.readinessProbePeriodSeconds }}
@@ -254,7 +262,11 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
@@ -262,7 +274,11 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.livenessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.livenessProbePeriodSeconds }}
@@ -274,7 +290,11 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- if .Values.server.probeHeaders }}
               httpHeaders:
@@ -285,7 +305,11 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
+              {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
+              {{- else }}
+              port: 9090
+              {{- end }}
             {{- end }}
             failureThreshold: {{ .Values.server.startupProbe.failureThreshold }}
             periodSeconds: {{ .Values.server.startupProbe.periodSeconds }}
