--- a/charts/prometheus/templates/headless-svc.yaml
+++ b/charts/prometheus/templates/headless-svc.yaml
@@ -19,7 +19,11 @@ spec:
     - name: http
       port: {{ .Values.server.statefulSet.headless.servicePort }}
       protocol: TCP
+      {{- if .Values.server.portName }}
       targetPort: {{ .Values.server.portName }}
+      {{- else }}
+      targetPort: 9090
+      {{- end }}
     {{- if .Values.server.statefulSet.headless.gRPC.enabled }}
     - name: grpc
       port: {{ .Values.server.statefulSet.headless.gRPC.servicePort }}
