--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -37,7 +37,11 @@ spec:
     - name: http
       port: {{ .Values.server.service.servicePort }}
       protocol: TCP
+      {{- if .Values.server.portName }}
       targetPort: {{ .Values.server.portName }}
+      {{- else }}
+      targetPort: 9090
+      {{- end }}
     {{- if ( and (eq .Values.server.service.type "NodePort" ) (not (empty .Values.server.service.nodePort)) ) }}
       nodePort: {{ .Values.server.service.nodePort }}
     {{- end }}
