use names targetport
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -224,7 +224,7 @@ spec:
           {{- end }}
         {{- end }}
           ports:
-            - containerPort: 9090
+            - containerPort: {{ include "prometheus.port" . }}
           {{- if .Values.server.portName }}
               name: {{ .Values.server.portName }}
           {{- end }}
@@ -238,7 +238,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
@@ -250,7 +250,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.readinessProbeInitialDelay }}
@@ -265,7 +265,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
@@ -277,7 +277,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.livenessProbeInitialDelay }}
@@ -293,7 +293,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
               scheme: {{ .Values.server.probeScheme }}
               {{- if .Values.server.probeHeaders }}
@@ -308,7 +308,7 @@ spec:
               {{- if .Values.server.portName }}
               port: {{ .Values.server.portName }}
               {{- else }}
-              port: 9090
+              port: {{ include "prometheus.port" . }}
               {{- end }}
             {{- end }}
             failureThreshold: {{ .Values.server.startupProbe.failureThreshold }}
