--- a/charts/prometheus/templates/headless-svc.yaml
+++ b/charts/prometheus/templates/headless-svc.yaml
@@ -22,7 +22,7 @@ spec:
       {{- if .Values.server.portName }}
       targetPort: {{ .Values.server.portName }}
       {{- else }}
-      targetPort: 9090
+      targetPort: {{ include "prometheus.port" . }}
       {{- end }}
     {{- if .Values.server.statefulSet.headless.gRPC.enabled }}
     - name: grpc
