--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -40,7 +40,7 @@ spec:
       {{- if .Values.server.portName }}
       targetPort: {{ .Values.server.portName }}
       {{- else }}
-      targetPort: 9090
+      targetPort: {{ include "prometheus.port" . }}
       {{- end }}
     {{- if ( and (eq .Values.server.service.type "NodePort" ) (not (empty .Values.server.service.nodePort)) ) }}
       nodePort: {{ .Values.server.service.nodePort }}
