--- a/charts/prometheus/templates/network-policy.yaml
+++ b/charts/prometheus/templates/network-policy.yaml
@@ -12,5 +12,5 @@ spec:
       {{- include "prometheus.server.matchLabels" . | nindent 6 }}
   ingress:
     - ports:
-      - port: 9090
+      - port: {{ include "prometheus.port" . }}
 {{- end }}
