--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -235,11 +235,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/ready
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
