--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -112,9 +112,9 @@ spec:
           {{- end }}
           args:
             - --watched-dir=/etc/config
-          {{- $default_url := "http://127.0.0.1:9090/-/reload" }}
+          {{- $default_url := (printf "http://127.0.0.1:%s/-/reload" (include "prometheus.port" .)) }}
           {{- with .Values.server.prefixURL }}
-          {{- $default_url = printf "http://127.0.0.1:9090%s/-/reload" . }}
+          {{- $default_url = printf "http://127.0.0.1:%s%s/-/reload" (include "prometheus.port" .) . }}
           {{- end }}
           {{- if .Values.configmapReload.prometheus.containerPort }}
             - --listen-address=0.0.0.0:{{ .Values.configmapReload.prometheus.containerPort }}
@@ -243,11 +243,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.readinessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.readinessProbePeriodSeconds }}
@@ -258,11 +254,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- with .Values.server.probeHeaders }}
               httpHeaders:
@@ -270,11 +262,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
             {{- end }}
             initialDelaySeconds: {{ .Values.server.livenessProbeInitialDelay }}
             periodSeconds: {{ .Values.server.livenessProbePeriodSeconds }}
@@ -286,11 +274,7 @@ spec:
             {{- if not .Values.server.tcpSocketProbeEnabled }}
             httpGet:
               path: {{ .Values.server.prefixURL }}/-/healthy
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
               scheme: {{ .Values.server.probeScheme }}
               {{- if .Values.server.probeHeaders }}
               httpHeaders:
@@ -301,11 +285,7 @@ spec:
               {{- end }}
             {{- else }}
             tcpSocket:
-              {{- if .Values.server.portName }}
-              port: {{ .Values.server.portName }}
-              {{- else }}
-              port: {{ include "prometheus.port" . }}
-              {{- end }}
+              port: {{ default (include "prometheus.port" .) .Values.server.portName }}
             {{- end }}
             failureThreshold: {{ .Values.server.startupProbe.failureThreshold }}
             periodSeconds: {{ .Values.server.startupProbe.periodSeconds }}
