use named port for service and probes
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus/templates/headless-svc.yaml
+++ b/charts/prometheus/templates/headless-svc.yaml
@@ -19,11 +19,7 @@ spec:
     - name: http
       port: {{ .Values.server.statefulSet.headless.servicePort }}
       protocol: TCP
-      {{- if .Values.server.portName }}
-      targetPort: {{ .Values.server.portName }}
-      {{- else }}
-      targetPort: {{ include "prometheus.port" . }}
-      {{- end }}
+      targetPort: {{ default (include "prometheus.port" .) .Values.server.portName }}
     {{- if .Values.server.statefulSet.headless.gRPC.enabled }}
     - name: grpc
       port: {{ .Values.server.statefulSet.headless.gRPC.servicePort }}
