--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -37,11 +37,7 @@ spec:
     - name: http
       port: {{ .Values.server.service.servicePort }}
       protocol: TCP
-      {{- if .Values.server.portName }}
-      targetPort: {{ .Values.server.portName }}
-      {{- else }}
-      targetPort: {{ include "prometheus.port" . }}
-      {{- end }}
+      targetPort: {{ default (include "prometheus.port" .) .Values.server.portName }}
     {{- if ( and (eq .Values.server.service.type "NodePort" ) (not (empty .Values.server.service.nodePort)) ) }}
       nodePort: {{ .Values.server.service.nodePort }}
     {{- end }}
