--- a/charts/kube-prometheus-stack/templates/prometheus/podmonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/podmonitors.yaml
@@ -37,5 +37,9 @@ items:
     {{- if .fallbackScrapeProtocol }}
       fallbackScrapeProtocol: {{ .fallbackScrapeProtocol }}
     {{- end }}
+    {{- if .attachMetadata }}
+      attachMetadata:
+{{ toYaml .attachMetadata | indent 8 }}
+    {{- end }}
 {{- end }}
 {{- end }}
