--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
@@ -38,5 +38,9 @@ items:
     {{- if .fallbackScrapeProtocol }}
       fallbackScrapeProtocol: {{ .fallbackScrapeProtocol }}
     {{- end }}
+    {{- if .attachMetadata }}
+      attachMetadata:
+{{ toYaml .attachMetadata | indent 8 }}
+    {{- end }}
 {{- end }}
 {{- end }}
