change template format in servicemonitors
Signed-off-by: Christophe MORIO <christophe.morio@qlik.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
@@ -38,9 +38,9 @@ items:
     {{- if .fallbackScrapeProtocol }}
       fallbackScrapeProtocol: {{ .fallbackScrapeProtocol }}
     {{- end }}
-    {{- if .attachMetadata }}
+    {{- with .attachMetadata }}
       attachMetadata:
-{{ toYaml .attachMetadata | indent 8 }}
+        {{- toYaml . | nindent 8 }}
     {{- end }}
 {{- end }}
 {{- end }}
