feat: extra paths ingress
Signed-off-by: Michael Act <86778470+michaelact@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/templates/alertmanager/ingress.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/ingress.yaml
@@ -31,6 +31,9 @@ spec:
       http:
         paths:
   {{- range $p := $paths }}
+          {{- with $extraPaths }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           - path: {{ tpl $p $ }}
             pathType: {{ $pathType }}
             backend:
@@ -44,6 +47,9 @@ spec:
     - http:
         paths:
   {{- range $p := $paths }}
+          {{- with $extraPaths }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           - path: {{ tpl $p $ }}
             pathType: {{ $pathType }}
             backend:
