--- a/charts/kube-prometheus-stack/templates/prometheus/ingress.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/ingress.yaml
@@ -30,6 +30,9 @@ spec:
       http:
         paths:
   {{- range $p := $paths }}
+          {{- with $extraPaths }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           - path: {{ tpl $p $ }}
             pathType: {{ $pathType }}
             backend:
@@ -43,6 +46,9 @@ spec:
     - http:
         paths:
   {{- range $p := $paths }}
+          {{- with $extraPaths }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           - path: {{ tpl $p $ }}
             pathType: {{ $pathType }}
             backend:
