fix: Error: parse error at (kube-prometheus-stack/templates/prometheus/ingress.yaml:33): undefined variable "$extraPaths"
Signed-off-by: Michael Act <86778470+michaelact@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/ingress.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/ingress.yaml
@@ -4,6 +4,7 @@
   {{- $servicePort := .Values.prometheus.ingress.servicePort | default .Values.prometheus.service.port -}}
   {{- $routePrefix := list .Values.prometheus.prometheusSpec.routePrefix -}}
   {{- $paths := .Values.prometheus.ingress.paths | default $routePrefix -}}
+  {{- $extraPaths := .Values.prometheus.ingress.extraPaths | default list -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
