--- a/charts/kube-prometheus-stack/templates/alertmanager/ingress.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/ingress.yaml
@@ -5,6 +5,7 @@
 {{- $servicePort := .Values.alertmanager.ingress.servicePort | default .Values.alertmanager.service.port -}}
 {{- $routePrefix := list .Values.alertmanager.alertmanagerSpec.routePrefix }}
 {{- $paths := .Values.alertmanager.ingress.paths | default $routePrefix -}}
+{{- $extraPaths := .Values.alertmanager.ingress.extraPaths | default list -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
