Update network policy template
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus/templates/network-policy.yaml
+++ b/charts/prometheus/templates/network-policy.yaml
@@ -12,5 +12,5 @@ spec:
       {{- include "prometheus.server.matchLabels" . | nindent 6 }}
   ingress:
     - ports:
-      - port: {{ include "prometheus.port" . }}
+      - port: {{ default (include "prometheus.port" .) .Values.server.portName }}
 {{- end }}
