Change the alertmanager.persistence.size back to 2Gi
Signed-off-by: rb090 <roxana@lipocheck.de>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -1333,7 +1333,7 @@ alertmanager:
     # storageClass: "-"
     accessModes:
       - ReadWriteOnce
-    size: 50Mi
+    size: 2Gi
 
     ## Configure emptyDir volume
     ##
