Add support for common labels
Signed-off-by: Vladimir Petr <vp@cloudeteer.de>

--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -301,6 +301,9 @@ resources: {}
   #   cpu: 100m
   #   memory: 200Mi
 
+## labels to attach to all resources
+commonLabels: {}
+
 ## deployment allows setting additional labels and annotations for deployment
 deployment:
   annotations: {}
