[prometheus-kafka-exporter] Missing Startup Probe
Signed-off-by: kjoshi <kjoshi@egnyte.com>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -127,6 +127,10 @@ spec:
             - name: exporter-port
               containerPort: 9308
               protocol: TCP
+{{- if .Values.startup.enabled }}
+          startupProbe:
+{{- toYaml .Values.startup.probe | trim | nindent 12 }}
+{{- end }}
 {{- if .Values.liveness.enabled }}
           livenessProbe:
 {{- toYaml .Values.liveness.probe | trim | nindent 12 }}
